web-infras/parser/tests/fixtures/babel/core/scope/undecl-export-as/output.txt
[SyntaxError]: Export variable is not defined. (1,10)
1|export { encrypt as decrypt };
 |        ^
